
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int STDIN_FILENO ;
 int STDOUT_FILENO ;
 int perror (char*) ;
 scalar_t__ tcsetattr (int ,int ,int *) ;
 int term_in ;
 int term_out ;
 scalar_t__ term_set_in ;
 scalar_t__ term_set_out ;

void set_terminal_attributes (void) {
  if (term_set_in) {
    if (tcsetattr (STDIN_FILENO, 0, &term_in) < 0) {
      perror ("tcsetattr()");
    }
  }
  if (term_set_out) {
    if (tcsetattr (STDOUT_FILENO, 0, &term_out) < 0) {
      perror ("tcsetattr()");
    }
  }
}
